15797
In foo/bar/package.scala:
```scala
package foo

package object bar {
  class Val(b: Boolean)
  implicit def boolean2Val(b: Boolean) = new Val(b)
}
```

In foo/bar/A.scala:
```scala
package foo.bar

class A {
  val s: Val = false
}
```
```scala
> scalac foo\bar\package.scala foo\bar\A.scala
foo\bar\A.scala:4: error: type mismatch;
 found   : Boolean(false)
 required: foo.bar.package.Val
Note that implicit conversions are not applicable because they are ambiguous:
 both method boolean2Val in package bar of type (b: Boolean)foo.bar.package.Val
 and method boolean2Val in package bar of type (b: Boolean)foo.bar.package.Val
 are possible conversion functions from Boolean(false) to foo.bar.package.Val
  val s: Val = false
               ^
one error found
```
```scala
> scalac -version
Scala compiler version 2.8.0.final -- Copyright 2002-2010, LAMP/EPFL
```
